<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ping Pong - escravo</string>
    <string name="action_settings">Settings</string>
    <string name="eixox">Eixo X:</string>
    <string name="eixoy">Eixo Y:</string>
    <string name="eixoz">Eixo Z:</string>
    <string name="xyz">Leituras</string>
    <string name="con">Conexão</string>
    <string name="ip">Endereço IP</string>
    <string name="porta">Porta</string>
    <string name="statustext">Status:</string>
    <string name="statusinfo"></string>
    <string name="conbutton">Conectar / Desconectar</string>
    <string name="iphint">192.168.1.129</string>
    <string name="portahint">6900</string>

</resources>